--- a/css/style.css
+++ b/css/style.css
@@ -169,11 +169,8 @@ img {
 }
 /*end reset*/
 body {
-  background: url(../images/bg.png) no-repeat #fff;
-  background-repeat: no-repeat;
+  background-image: linear-gradient(to top, rgb(0, 8, 255), rgba(0, 8, 255, 0.70));
   background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
   font-family: "Open Sans", arial, sans-serif;
   font-weight: 300;
 }
